Multiple Changes/fixes
- Add docking option and style dock
- Category Removed from Breadcrumb
- Moodledocs link removed
- Drop down colour highlight changed to background colour
- New user profile menu added- not as fast and difficult to use
- Notifications abr added for alerts t otop of page
- Logged in As user shows in alerts bar so admins can see who they are logged in as
- Parent menu fixed, no longer overlaps when selecting and moving quickly
- Logo has left padding to prevent sticking on smaller screens
- Local references to scripts changed to relative/actual
- Tabs background colour fixed so can be see easily
- Links in top mega menu now working as expected
- Image icons fixed in glossary pages
- Global tabs fixed
- Glossary Concepts now showing correctly
- Footer no longer shows footer 1 - comments was left in now removed
- Docking is now turned on

--- a/style/menu.css
+++ b/style/menu.css
@@ -1,6 +1,6 @@
 #navwrap {
     clear: both;
-    border-bottom: 3px solid #b7b3ef;
+    border-bottom: none;
 }
 
 .navbar {
@@ -219,5 +219,331 @@
 button.btn.btn-navbar {
     margin-top: 6px;
 }
+
+
+
+
+
+
+/* Main menu wrapper */
+.cbp-hsmenu-wrapper {
+	position: relative;
+}
+
+/* Common style for all lists */
+.cbp-hsmenu-wrapper ul {
+	list-style: none;
+	padding: 0;
+	margin: 0px;
+}
+
+/* 100% width bar for menu */
+.cbp-hsinner {
+	
+	position: relative;
+	z-index: 9999;
+}
+
+/* Main menu style */
+.cbp-hsmenu-wrapper .cbp-hsmenu {
+	width: 100%;
+	
+	margin: 0px;
+	padding: 0px;
+}
+
+.cbp-hsmenu > li {
+	margin-left: -10px;
+	display: inline-block;
+   
+}
+
+.cbp-hsmenu > li:first-child {
+	margin-left: 0;
+}
+
+/* Main menu link style */
+.cbp-hsmenu > li > a {
+	color: #fff;
+	font-size: 1.2em;
+	line-height: 3em;
+	display: inline-block;
+	position: relative;
+	z-index: 9999;
+	outline: none;
+     padding-left:20px;
+    padding-right:20px;
+    padding-top:6px;
+    padding-bottom:6px;
+}
+
+.no-touch .cbp-hsmenu > li > a:hover,
+.no-touch .cbp-hsmenu > li > a:focus,
+.cbp-hsmenu > li.cbp-hsitem-open > a {
+	background-color:#4dc3cf;
+    color: #fff;
+    background: #4dc3cf url([[pix:theme|menuselector]]) no-repeat 100% 0; 
+    background-position: center top;
+    color: #fff;
+    text-decoration:none;
+}
+
+
+
+
+
+
+
+/* Submenu style */
+.cbp-hssubmenu {
+	position: absolute;
+	left: 0;
+	top: 100%;
+	width: 100%;
+	z-index: 0;
+	text-align: center; /* for aligning the sub items */
+	visibility: hidden;
+}
+
+.cbp-hssubmenu:before, 
+.cbp-hssubmenu:after { 
+	content: " "; 
+	display: table; 
+}
+.cbp-hssubmenu:after { 
+	clear: both; 
+}
+
+/* Let's allow 6 item in a row */
+.cbp-hssubmenu > li {
+	width: 16.2%;
+	display: inline-block;
+	vertical-align: top;
+	box-shadow: -28px 0 0 -27px #ddd, 0 -28px 0 -27px #ddd;
+	opacity: 0;
+	-webkit-transition: opacity 0.1s 0s;
+	-moz-transition: opacity 0.1s 0s;
+	transition: opacity 0.1s 0s;
+}
+
+/* First 6 items don't have upper box shadow */
+.cbp-hssubmenu > li:nth-child(-n+6) {
+	box-shadow: -28px 0 0 -27px #ddd;
+} 
+
+/* Every 7th item does not have a left box shadow */
+.cbp-hssubmenu > li:nth-child(6n+1) {
+	box-shadow:  0 -28px 0 -27px #ddd;
+}
+
+/* The first one does not have any box shadow */
+.cbp-hssubmenu > li:first-child {
+	box-shadow: none;
+}
+
+.cbp-hssubmenu > li a {
+	display: block;
+	text-align: center;
+	color: #a2a2a2;
+	outline: none;
+	padding: 2em 1em 1em 1em;
+}
+
+.no-touch .cbp-hssubmenu > li a:hover,
+.no-touch .cbp-hssubmenu > li a:focus {
+	color: #888;
+}
+
+.cbp-hssubmenu > li a img {
+	border: none;
+	outline: none;
+	display: inline-block;
+	margin: 0;
+	max-width: 100%;
+	-webkit-transition: opacity 0.2s;
+	-moz-transition: opacity 0.2s;
+	transition: opacity 0.2s;
+}
+
+.no-touch .cbp-hssubmenu > li a:hover img {
+	opacity: 0.5;
+}
+
+.cbp-hssubmenu > li a span {
+	display: block;
+	min-height: 3em;
+	margin-top: 0.4em;
+}
+
+.cbp-hsmenu > li.cbp-hsitem-open .cbp-hssubmenu {
+	z-index: 9999;
+	visibility: visible;
+}
+
+.cbp-hsmenu > li.cbp-hsitem-open .cbp-hssubmenu > li {
+	opacity: 1;
+	-webkit-transition: opacity 0.5s 0.1s;
+	-moz-transition: opacity 0.5s 0.1s;
+	transition: opacity 0.5s 0.1s;
+}
+
+/* Helper div for animating the background */
+.cbp-hsmenubg {
+	background: #f7f7f7;
+	position: absolute;
+	width: 100%;
+	top: 100%;
+	left: 0;
+	z-index: 0;
+	height: 0px;
+}
+
+.no-touch .cbp-hsmenubg {
+	-webkit-transition: height 0.3s;
+	-moz-transition: height 0.3s;
+	transition: height 0.3s;
+}
+
+@media screen and (max-width: 65em){
+	.cbp-hsmenu-wrapper {
+		font-size: 80%;
+	}
+}
+
+@media screen and (max-width: 51.4375em){
+	.cbp-hsmenu-wrapper {
+		font-size: 100%;
+	}
+
+	.cbp-hsmenu-wrapper .cbp-hsmenu {
+		padding: 0;
+		max-width: none;
+		width: 100%;
+	}
+
+	.cbp-hsmenu > li {
+		border-top: 1px solid rgba(255,255,255,0.5);
+		text-align: center;
+		margin: 0 auto;
+		display: block;
+	}
+
+	.cbp-hsmenu > li:first-child {
+		border-top: none;
+	}
+
+	.cbp-hsmenu > li > a {
+		display: block;
+	}
+
+	.cbp-hsmenu > li > a:not(:only-child):before {
+		line-height: 1.8;
+		right: 0;
+		position: absolute;
+		font-size: 200%;
+	}
+
+	.cbp-hsmenubg {
+		display: none;
+	}
+
+	.cbp-hssubmenu {
+		background: #f7f7f7;
+		position: relative;
+		overflow: hidden;
+		height: 0;
+	}
+
+	.cbp-hsmenu > li.cbp-hsitem-open .cbp-hssubmenu {
+		height: auto;
+	}
+
+	/* Let's only allow 3 item in a row now */
+	.cbp-hssubmenu > li {
+		width: 30%;
+	}
+
+	/* Reset box shadows for the 6 items in row case */
+	.cbp-hssubmenu > li:nth-child(-n+6),
+	.cbp-hssubmenu > li:nth-child(6n+1) {
+		box-shadow: -28px 0 0 -27px #ddd, 0 -28px 0 -27px #ddd;
+	}
+
+	/* First 4 items don't have upper box shadow */
+	.cbp-hssubmenu > li:nth-child(-n+3) {
+		box-shadow: -28px 0 0 -27px #ddd;
+	} 
+
+	/* Every 5th item does not have a left box shadow */
+	.cbp-hssubmenu > li:nth-child(3n+1) {
+		box-shadow:  0 -28px 0 -27px #ddd;
+	}
+
+}
+
+@media screen and (max-width: 25em){
+	/* Let's only allow 1 item in a row now */
+	.cbp-hssubmenu > li {
+		width: 100%;
+		display: block;
+	}
+
+	.cbp-hsmenu-wrapper .cbp-hssubmenu > li {
+		box-shadow: 0 1px #cecece;
+		text-align: left;
+	}
+
+	.cbp-hssubmenu > li a {
+		text-align: left;
+		line-height: 50px;
+		padding: 0.4em 1em;
+	}
+
+	.cbp-hssubmenu > li a img {
+		float: left;
+		max-height: 50px;
+	}
+
+	.cbp-hssubmenu > li a span {
+		min-height: 0;
+		margin: 0;
+	}
+}
+
+
+
+.nav.nojs > li:hover > a {
+ background-color:#4dc3cf;
+    color: #fff;
+    background: #4dc3cf url([[pix:theme|menuselector]]) no-repeat 100% 0; 
+    background-position: center top;
+    color: #fff;
+}
+
+
+
+@media (max-width: 979px){
+
+    
+
+.nav.nojs > li > a {
+ 
+    border-radius: 0px;
+}  
+    
+    
+    
+    .nav.nojs > li:hover > a {
+ background-color:#4dc3cf;
+    color: #fff;
+    background: #4dc3cf; 
+    background-position: center top;
+    color: #fff;
+    border-radius: 0px;
+}
+
+    
+}
+
 
  
