--- a/style/slider.css
+++ b/style/slider.css
@@ -68,7 +68,7 @@ html[xmlns] .slides {display: block;}
     background-color: #722975;
     color: #fff;
     margin: 0;
-    padding: 25px 25px 25px 30px;
+   padding: 5px 15px 0px 15px;
     position: absolute;
     top: 30px;
     left: 20px;
